added future predictions with lag

--- a/predict.ipynb
+++ b/predict.ipynb
@@ -7686,7 +7686,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 217,
+   "execution_count": null,
    "id": "d5b01cbf",
    "metadata": {},
    "outputs": [],
@@ -7699,16 +7699,15 @@
     "        'learning_rate': trial.suggest_float('learning_rate', 0.01, 0.3, log=True),\n",
     "        'subsample': trial.suggest_float('subsample', 0.5, 1.0),\n",
     "        'colsample_bytree': trial.suggest_float('colsample_bytree', 0.5, 1.0),\n",
-    "        # Estos dos ayudan a la selección automática de variables que querías:\n",
     "        'alpha': trial.suggest_float('alpha', 1e-3, 10.0, log=True),\n",
     "        'lambda': trial.suggest_float('lambda', 1e-3, 10.0, log=True),\n",
     "    }\n",
     "\n",
-    "    # Entrenamos el modelo con los parámetros sugeridos\n",
+    "    # Entrenamos el modelo\n",
     "    model = xgb.XGBRegressor(**param, random_state=42)\n",
     "    model.fit(X_train, y_train)\n",
-    "    \n",
-    "    # Predecimos y calculamos el R2\n",
+    "\n",
+    "    # Calculamos el R2\n",
     "    preds = model.predict(X_test)\n",
     "    r2 = r2_score(y_test, preds)\n",
     "    \n",
