resultado primer modelo

--- a/notebooks/predict_Future.ipynb
+++ b/notebooks/predict_Future.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 28,
    "id": "89c04436",
    "metadata": {},
    "outputs": [],
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 29,
    "id": "11b3091b",
    "metadata": {},
    "outputs": [],
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 30,
    "id": "1b2f2e2e",
    "metadata": {},
    "outputs": [],
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 31,
    "id": "569b3401",
    "metadata": {},
    "outputs": [],
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 32,
    "id": "ebd8c31a",
    "metadata": {},
    "outputs": [
@@ -64,30 +64,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "La predicción de polen para el próximo día es: inf\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\sergi\\AppData\\Local\\Temp\\ipykernel_6352\\3425150665.py:9: RuntimeWarning: overflow encountered in expm1\n",
-      "  prediccion_final = np.expm1(prediccion_raw)\n"
+      "La predicción de polen para el próximo día es: 2.34\n"
      ]
     }
    ],
    "source": [
-    "# Convertir los datos al formato que entiende el Booster\n",
     "dmatrix_input = xgb.DMatrix(input_data)\n",
     "\n",
-    "# Realizar la predicción\n",
     "prediccion_raw = model.predict(dmatrix_input)[0]\n",
     "\n",
-    "# Si en tu entrenamiento usaste logaritmo (como en train_model_v4.py), \n",
-    "# debes revertir la transformación con expm1\n",
-    "prediccion_final = np.expm1(prediccion_raw)\n",
-    "\n",
-    "print(f\"La predicción de polen para el próximo día es: {prediccion_final:.2f}\")"
+    "print(f\"La predicción de polen para el próximo día es: {prediccion_raw:.2f}\")"
    ]
   }
  ],
