predict target diff

--- a/notebooks/update_Data.ipynb
+++ b/notebooks/update_Data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 125,
    "id": "e6413713",
    "metadata": {},
    "outputs": [],
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 126,
    "id": "4b3ebc91",
    "metadata": {},
    "outputs": [],
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 127,
    "id": "846fab59",
    "metadata": {},
    "outputs": [],
@@ -59,7 +59,7 @@
     "df_nuevos = df_nuevos[df_nuevos['tipo_polinico'] == 'Gramíneas']\n",
     "df_nuevos = df_nuevos[df_nuevos['captador'] == 'AYTM']\n",
     "df_nuevos['fecha'] = pd.to_datetime(df_nuevos['fecha_lectura'])\n",
-    "df_polen = df_nuevos[['fecha', 'granos_de_polen_x_metro_cubico']].rename(columns={'granos_de_polen_x_metro_cubico': 'granos_de_polen_x_metro_cubico'})\n"
+    "df_polen = df_nuevos[['fecha', 'granos_de_polen_x_metro_cubico']].rename(columns={'granos_de_polen_x_metro_cubico': 'granos_de_polen_x_metro_cubico'})"
    ]
   },
   {
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 128,
    "id": "e7a4f861",
    "metadata": {},
    "outputs": [
@@ -154,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 129,
    "id": "a1e4dd65",
    "metadata": {},
    "outputs": [],
@@ -226,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 130,
    "id": "8f95f6e1",
    "metadata": {},
    "outputs": [],
@@ -236,7 +236,10 @@
     "df_final = pd.concat([df_master, df_updates], ignore_index=True)\n",
     "df_final = df_final.groupby('fecha', as_index=False).first()\n",
     "\n",
-    "df_final = df_final.sort_values('fecha', ascending=False)\n",
+    "df_final = df_final.sort_values('fecha', ascending=True)\n",
+    "\n",
+    "# Solucionar desfase\n",
+    "# df_final['granos_de_polen_x_metro_cubico'] = df_final['granos_de_polen_x_metro_cubico'].shift(-1)\n",
     "\n",
     "df_final.to_csv(r\"..\\new_datasets\\datos_gramineas.csv\", index=False)"
    ]
